[selection] HTMLTextFormControlElement::subtreeHasChanged() shouldn't be called in setRangeText https://bugs.webkit.org/show_bug.cgi?id=237720

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

Update test expectations as more sub-tests are now passing.
* web-platform-tests/html/semantics/forms/textfieldselection/selection-value-interactions-expected.txt:
* web-platform-tests/html/semantics/forms/textfieldselection/textfieldselection-setRangeText-expected.txt:

Source/WebCore:

We shouldn't call HTMLTextFormControlElement::subtreeHasChanged() in HTMLTextFormControlElement::setRangeText.
It has been removed in patch for bug 237641. This patch is to further remove unnecessary code.

This change refers and imports some of the changes in chromium CL at
https://codereview.chromium.org/1577243002

* html/HTMLTextFormControlElement.cpp:
(WebCore::HTMLTextFormControlElement::setRangeText):

LayoutTests:

Update test expectation as the test is now passing.
* fast/forms/setrangetext-expected.txt:



Canonical link: https://commits.webkit.org/248659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291555 268f45cc-cd09-0410-ab3c-d52691b4dbfc